--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  .app-logo {
+  }
+  .app-logo2 {
+  }
+}
+
+.App .app-logo {
+}
+.App .app-logo2 {
 }
 
 .App-logo {
